# tiny-gpt-scratch

./: .gitignore  README.md  pyproject.toml  requirements-cuda.txt  requirements-mac.txt
configs/: bigram.yaml  multi_head_attention_shakespeare.yaml  positional_bigram.yaml  positional_bigram_shakespeare.yaml  single_head_attention_shakespeare.yaml  tiny_gpt_shakespeare.yaml  transfomer_attention_shakespeare.yaml  transformer_attention_shakespeare.yaml
scripts/: train.py
src/tiny_gpt/: __init__.py  attention.py  attention_models.py  bigrams.py  blocks.py  checkpoint.py  data.py  evaluate.py  generation.py  losses.py  model.py  model_blocks.py  registry.py  telemetry.py  tokenizer.py  train.py  utils.py
