[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-gpt"
version = "0.1.0"
description = "A tiny GPT-style language model built from scratch for learning."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "tqdm",
    "PyYAML",
    "tensorboard",
]

[tool.setuptools.packages.find]
where = ["src"]
